--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "express-validator": "^7.3.0",
     "helmet": "^8.1.0",
     "joi": "^18.0.1",
-    "mongoose": "^8.19.3"
+    "mongoose": "^8.19.3",
+    "nodemailer": "^7.0.10"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
